--- a/react_app/react_app/package.json
+++ b/react_app/react_app/package.json
@@ -16,7 +16,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --open --config webpack.dev.js",
     "start": "webpack --config webpack.prod.js",
-    "fireTheProd": "webpack --config webpack.prod.js && node dist/server.js"
+    "prod": "webpack --config webpack.prod.js && node dist/server.js"
   },
   "keywords": [],
   "author": "",
